@@ -172,4 +172,3 @@ ATTR_joblogkeepdays,
 ATTR_authusers,
 #endif
 ATTR_moabarraycompatible,
-ATTR_autonodegpu,
