@@ -1167,19 +1167,6 @@ attribute_def svr_attr_def[] = {
    PARENT_TYPE_SERVER
   },
 
-  /* SRV_ATR_AutoNodeGPU */
-  {ATTR_autonodegpu,		/* "auto_node_gpu" */
-   decode_b,
-   encode_b,
-   set_b,
-   comp_b,
-   free_null,
-   update_gpus,
-   MGR_ONLY_SET,
-   ATR_TYPE_LONG,
-   PARENT_TYPE_SERVER
-  },
-
   /* site supplied server attribute definitions if any, see site_svr_attr_*.h  */
 #include "site_svr_attr_def.h"
 
